# sprite

./: CMakeLists.txt  main.cpp
